--- a/Examen/src/main/webapp/register.html
+++ b/Examen/src/main/webapp/register.html
@@ -9,10 +9,18 @@
   <input type="text" name="Id" placeholder="Id"><br>
   <input type="text" name="Name" placeholder="Name"><br>
   <input type="text" name="Serial" placeholder="Serial"><br>
-  <input type="text" name="Type" placeholder="Type"><br>
-  <input type="text" name="Status" placeholder="Status"><br>
+    <input type="text" name="Type" placeholder="Type"><br>
+    <input type="text" name="MaxValue" placeholder="maxValue"><br>
+    <input type="text" name="MinValue" placeholder="minValue"><br>
+    <input type="text" name="SamplingPeriod" placeholder="samplingPeriod"><br>
+    <input type="text" name="TimeTolerance" placeholder="timeTolerance"><br>
+    <input type="text" name="Unit" placeholder="Unit"><br>
 
-  <button type="submit">Submit</button>
+
+
+
+
+    <button type="submit">Submit</button>
 </form>
 </body>
 </html>
